jewel-slider: HSlider Visibility Not Working (fix #1076)

--- a/frameworks/projects/Jewel/src/main/resources/defaults.css
+++ b/frameworks/projects/Jewel/src/main/resources/defaults.css
@@ -3653,7 +3653,7 @@ j|ScrollableSectionContent {
 .jewel.slider {
   position: relative;
   height: 27px;
-  display: flex !important;
+  display: flex;
   flex-direction: row;
   background: none;
 }
